New Artwork for the Landing Slide
Added artwork for the landing/hero/main/title slide

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                                 <!-- Section Slide -->
                                                 <div class="swiper-slide" data-title="ryanbaier" data-subtitle="Video And Motion Graphics Artist">                                            
                                                     <div class="img-mask">
-                                                        <div class="section-image" data-src="images/01hero.jpg"></div>                                            
+                                                        <div class="section-image" data-src="images/Main_BG.png"></div>                                            
                                                     </div>
                                                     <a class="title hide-ball" data-type="page-transition" href="project01.html">ryanbaier</a>
                                                 </div>
