--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <link rel="stylesheet" href="css/full-page-scroll.css">
 <script src="js/full-page-scroll.js"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script>
-<script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+<!--<script>var __adobewebfontsappname__="dreamweaver"</script>-->
+<!--<script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>-->
+<link rel="stylesheet" href="https://use.typekit.net/gds6oel.css">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
