--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="main" class="container"> 
   <!-- Navigation -->
   <header> <a href="">
-    <h4 class="logo">LIGHT</h4>
+    <h4 class="logo">ryanbaier.com</h4>
     </a>
     <nav>
       <ul>
@@ -40,8 +40,8 @@
 <div id="body" class="scroll-container">
   <section class="hero" id="hero">
 	<div class="background-image"/>
-    <h2 class="hero_header">HERO <span class="light">LIGHT</span></h2>
-    <p class="tagline">Light is a simple one page website</p>
+    <h2 class="hero_header"><span class="light">ryan</span>baier</h2>
+    <p class="tagline">Video And Motion Graphics Artist</p>
   </section>
   <!-- Reel Section -->
   <section class="reel" id="reel">
