--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Light Theme</title>
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="css/full-page-scroll.css">
 <script src="js/full-page-scroll.js"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <!--<script>var __adobewebfontsappname__="dreamweaver"</script>-->
@@ -39,26 +37,31 @@
   <!-- Hero Section -->
 <div id="body" class="scroll-container">
   <section class="hero" id="hero">
-	<div class="background-image"/>
-    <h2 class="hero_header"><span class="light">ryan</span>baier</h2>
-    <p class="tagline">Video And Motion Graphics Artist</p>
+    <div class="hero-div">
+		<h2 class="hero_header"><span class="light">ryan</span>baier</h2>
+    	<p class="tagline">Video And Motion Graphics Artist</p>
+	</div>
   </section>
   <!-- Reel Section -->
   <section class="reel" id="reel">
-	<div class="background-image"/>
-    <h2 class="hidden">reel</h2>
+	<div class="reel-div">
+    	<h2 class="hero_header" style="text-align: left;"><span class="light">work</span></h2>
+    	<h2 class="hero_header" style="text-align: left;">reel</h2>
+    </div>
   </section>
 	
   <!-- Projects Section -->
   <section class="projects" id="projects">
-	<div class="background-image"/>
-    <h2 class="hidden">projects</h2>
+	<div class="projects-div">
+    	<h2 class="hero_header" style="text-align: left;">projects</h2>
+	</div>
   </section>
 	
   <!-- About Me Section -->
   <section class="about" id="about">
-	<div class="background-image"/>
-    <h2 class="hidden">about me</h2>
+	<div class="about-div">
+    	<h2 class="hero_header"><span class="light">about</span>me</h2>
+	</div>
   </section>
 	</div>
 </div>
