--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.typekit.net/gds6oel.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
@@ -17,29 +18,35 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="#banner" class="goto-next scrolly">ryan<b>baier.com</b></a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="#banner" class="goto-next scrolly">home</a></li>
+							<li><a href="#one" class="goto-next scrolly">work<b>reel</b></a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#two" class="goto-next scrolly">projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
+									<li><a href="left-sidebar.html">amazon</a></li>
+									<li><a href="no-sidebar.html">starwarsgalaxy'sedge</a></li>
+									<li><a href="right-sidebar.html">lego<b>universe</b></a></li>
+									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
+									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
+									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
+									<li><a href="right-sidebar.html">traditional<b>art</b></a></li>
+									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
+									<!--<li>
+										<a href="#">Projects</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
 											<li><a href="#">Option 2</a></li>
 											<li><a href="#">Option 3</a></li>
 											<li><a href="#">Option 4</a></li>
 										</ul>
-									</li>
+									</li>-->
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#three" class="goto-next scrolly">about<b>me</b></a></li>
+<!--							<li><a href="#" class="button primary">Sign Up</a></li>-->
 						</ul>
 					</nav>
 				</header>
@@ -48,9 +55,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>ryan<b>baier</b></h2>
+							<p>video and motion graphic artist
+<!--							<br />Just apps. Lots of mother flipping apps.</p>-->
 						</header>
 <!--						<span class="image"><img src="images/Main_BG.png" alt="" /></span>-->
 					</div>
@@ -65,8 +72,8 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>work<b>reel</b></h2>
+<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -87,11 +94,25 @@
 						</div>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
+					
 				</section>
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/Projects_BG.png" alt="" /></span>
+					<div class="box alt">
+									<div class="row gtr-50 gtr-uniform">
+<!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+									</div>
+								</div>
 					<!--<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
@@ -103,21 +124,38 @@
 						</ul>
 					</div>-->
 					<a href="#three" class="goto-next scrolly">Next</a>
+<!--					<a href="#one" class="goto-next scrolly">Previous</a>-->
 				</section>
 
 			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
+				<section id="three" class="spotlight style1 bottom">
 					<span class="image fit main bottom"><img src="images/About_BG.png" alt="" /></span>
-					<!--<div class="content">
-						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>-->
+					<div class="content">
+						<div class="container">
+							<div class="row">
+								<div class="col-4 col-12-medium">
+									<header>
+										<h2>about<b>me</b></h2>
+<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
+									</header>
+								</div>
+								<div class="col-4 col-12-medium">
+									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
+									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
+									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
+									augue varius tempus lobortis porttitor accumsan consequat
+									adipiscing lorem dolor.</p>
+								</div>
+								<div class="col-4 col-12-medium">
+									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
+									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
+									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
+									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
+									ipsum dolor nullam.</p>
+								</div>
+							</div>
+						</div>
+					</div>
 <!--					<a href="#four" class="goto-next scrolly">Next</a>-->
 				</section>
 
