--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>ryan<b>baier</b></h2>
+							<h2 style="text-align: inherit;">ryan<b>baier</b></h2>
 							<p>video and motion graphic artist
 <!--							<br />Just apps. Lots of mother flipping apps.</p>-->
 						</header>
@@ -65,31 +65,27 @@
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
+				<section id="one" class="spotlight style1 middle">
 					<span class="image fit main"><img src="images/Reel_BG.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="col-4 col-12-medium">
+								<div class="col-5 col-12-medium">
 									<header>
-										<h2>work<b>reel</b></h2>
+										<h2>work<br><b>reel</b></h2>
 <!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
 									</header>
 								</div>
-								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+								<div class="col-5 col-12-medium">
+									<iframe src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
-								<div class="col-4 col-12-medium">
+								<!--<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
 									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
 									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
 									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
 									ipsum dolor nullam.</p>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
@@ -98,21 +94,33 @@
 				</section>
 
 			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
+				<section id="two" class="spotlight style1 middle">
 					<span class="image fit main"><img src="images/Projects_BG.png" alt="" /></span>
-					<div class="box alt">
-									<div class="row gtr-50 gtr-uniform">
-<!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+					<div class="content">
+						<div class="container">
+							<div class="row">
+									<div class="col-5 col-12-medium">
+									<header>
+										<h2>projects</h2>
+<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
+									</header>
 									</div>
-								</div>
+									<div class="col-7 col-12-medium">
+										<div class="row gtr-33 gtr-uniform">
+<!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+									</div>
+									</div>
+							</div>
+						</div>
+					</div>	
 					<!--<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
@@ -128,14 +136,14 @@
 				</section>
 
 			<!-- Three -->
-				<section id="three" class="spotlight style1 bottom">
+				<section id="three" class="spotlight style1 middle">
 					<span class="image fit main bottom"><img src="images/About_BG.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>about<b>me</b></h2>
+										<h2>about<br><b>me</b></h2>
 <!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
 									</header>
 								</div>
