Further visual tweaks to the main page.
Added and started laying out Star Wars project page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<a href="#two" class="goto-next scrolly">projects</a>
 								<ul>
 									<li><a href="left-sidebar.html">amazon</a></li>
-									<li><a href="no-sidebar.html">starwarsgalaxy'sedge</a></li>
+									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
 									<li><a href="right-sidebar.html">lego<b>universe</b></a></li>
 									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
@@ -56,7 +56,7 @@
 					<div class="content">
 						<header>
 							<h2 style="text-align: inherit;">ryan<b>baier</b></h2>
-							<p>video and motion graphic artist
+							<p>video and motion graphic artist</p>
 <!--							<br />Just apps. Lots of mother flipping apps.</p>-->
 						</header>
 <!--						<span class="image"><img src="images/Main_BG.png" alt="" /></span>-->
@@ -108,8 +108,8 @@
 									<div class="col-7 col-12-medium">
 										<div class="row gtr-33 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /><p style="position: absolute; top: 50%; left: 50%; text-align: center">amazon</p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /><p style="position: absolute; top: 50%; left: 50%; text-align: center">starwars<br>galaxy'sedge</p></span></div>
 										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
 										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
 										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
