Fixed verical spacing of reel, projects, and about sections

--- a/original_don'tuploadme/index.html
+++ b/original_don'tuploadme/index.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://use.typekit.net/gds6oel.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
@@ -18,35 +17,29 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="#banner" class="goto-next scrolly">ryan<b>baier.com</b></a></h1>
+					<h1 id="logo"><a href="index.html">Landed</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="#banner" class="goto-next scrolly">home</a></li>
-							<li><a href="#one" class="goto-next scrolly">work<b>reel</b></a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#two" class="goto-next scrolly">projects</a>
+								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">amazon</a></li>
-									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="right-sidebar.html">lego<b>universe</b></a></li>
-									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
-									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
-									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
-									<li><a href="right-sidebar.html">traditional<b>art</b></a></li>
-									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
-									<!--<li>
-										<a href="#">Projects</a>
+									<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<li><a href="right-sidebar.html">Right Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li>
+										<a href="#">Submenu</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
 											<li><a href="#">Option 2</a></li>
 											<li><a href="#">Option 3</a></li>
 											<li><a href="#">Option 4</a></li>
 										</ul>
-									</li>-->
+									</li>
 								</ul>
 							</li>
-							<li><a href="#three" class="goto-next scrolly">about<b>me</b></a></li>
-<!--							<li><a href="#" class="button primary">Sign Up</a></li>-->
+							<li><a href="elements.html">Elements</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -55,96 +48,25 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>ryan<b>baier</b></h2>
-							<p>video and motion graphic artist</p>
-<!--							<br />Just apps. Lots of mother flipping apps.</p>-->
+							<h2>The future has landed</h2>
+							<p>And there are no hoverboards or flying cars.<br />
+							Just apps. Lots of mother flipping apps.</p>
 						</header>
-<!--						<span class="image"><img src="images/Main_BG.png" alt="" /></span>-->
+						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 middle">
-					<span class="image fit main"><img src="images/Reel_BG.png" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="col-5 col-12-medium">
-									<header>
-										<h2>work<br><b>reel</b></h2>
-<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
-									</header>
-								</div>
-								<div class="col-7 col-12-medium">
-									<iframe src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-								</div>
-								<!--<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
-								</div>-->
-							</div>
-						</div>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-					
-				</section>
-
-			<!-- Two -->
-				<section id="two" class="spotlight style1 middle">
-					<span class="image fit main"><img src="images/Projects_BG.png" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-									<div class="col-5 col-12-medium">
-									<header>
-										<h2>projects</h2>
-<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
-									</header>
-									</div>
-									<div class="col-7 col-12-medium">
-										<div class="row gtr-33 gtr-uniform">
-<!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /><p style="position: absolute; top: 50%; left: 50%; text-align: center">amazon</p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /><p style="position: absolute; top: 50%; left: 50%; text-align: center">starwars<br>galaxy'sedge</p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-									</div>
-									</div>
-							</div>
-						</div>
-					</div>	
-					<!--<div class="content">
-						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>-->
-					<a href="#three" class="goto-next scrolly">Next</a>
-<!--					<a href="#one" class="goto-next scrolly">Previous</a>-->
-				</section>
-
-			<!-- Three -->
-				<section id="three" class="spotlight style1 middle">
-					<span class="image fit main bottom"><img src="images/About_BG.png" alt="" /></span>
+				<section id="one" class="spotlight style1 bottom">
+					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>about<br><b>me</b></h2>
-<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
+										<h2>Odio faucibus ipsum integer consequat</h2>
+										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -164,11 +86,43 @@
 							</div>
 						</div>
 					</div>
-<!--					<a href="#four" class="goto-next scrolly">Next</a>-->
+					<a href="#two" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- Two -->
+				<section id="two" class="spotlight style2 right">
+					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Interdum amet non magna accumsan</h2>
+							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+						</header>
+						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- Three -->
+				<section id="three" class="spotlight style3 left">
+					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Interdum felis blandit praesent sed augue</h2>
+							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+						</header>
+						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Four -->
-				<!--<section id="four" class="wrapper style1 special fade-up">
+				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>Accumsan sed tempus adipiscing blandit</h2>
@@ -214,10 +168,10 @@
 							</ul>
 						</footer>
 					</div>
-				</section>-->
+				</section>
 
 			<!-- Five -->
-				<!--<section id="five" class="wrapper style2 special fade">
+				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
 							<h2>Magna faucibus lorem diam</h2>
@@ -230,16 +184,16 @@
 							</div>
 						</form>
 					</div>
-				</section>-->
+				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-<!--						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-<!--						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
-<!--						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
