--- a/original_don'tuploadme/no-sidebar.html
+++ b/original_don'tuploadme/no-sidebar.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://use.typekit.net/gds6oel.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -18,59 +17,46 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html" class="goto-next scrolly">ryan<b>baier.com</b></a></h1>
+					<h1 id="logo"><a href="index.html">Landed</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html" class="goto-next scrolly">home</a></li>
-							<li><a href="index.html#one" class="goto-next scrolly">work<b>reel</b></a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="index.html#two" class="goto-next scrolly">projects</a>
+								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">amazon</a></li>
-									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="right-sidebar.html">lego<b>universe</b></a></li>
-									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
-									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
-									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
-									<li><a href="right-sidebar.html">traditional<b>art</b></a></li>
-									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
+									<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<li><a href="right-sidebar.html">Right Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option 1</a></li>
+											<li><a href="#">Option 2</a></li>
+											<li><a href="#">Option 3</a></li>
+											<li><a href="#">Option 4</a></li>
+										</ul>
+									</li>
 								</ul>
 							</li>
-							<li><a href="#three" class="goto-next scrolly">about<b>me</b></a></li>
+							<li><a href="elements.html">Elements</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
 
 			<!-- Main -->
-
-<!--				<div id="main" class="wrapper style1">
+				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
 							<h2>No Sidebar</h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
-										</header>-->
-<!--							<section id="banner">
-									<div class="content">
-										<header>
-											<h2 style="text-align: inherit;">star<b>wars</b><br>galaxy's<b>edge</b></h2>
-										</header>
-									</div>
-							</section>-->
-				<section id="one" class="spotlight style1 middle" style="height: 50vh">
-					<span class="image fit main"><img src="images/SWGE_BG.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>star<b>wars<br>galaxy's</b>edge</h2>
 						</header>
-					</div>
-					<a href="#content" class="goto-next scrolly">Next</a>
-					
-				</section>
+
 						<!-- Content -->
 							<section id="content">
-<!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
+								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 								<h3>Dolore Amet Consequat</h3>
-								<p>In early 2019 I had the opportunity to journey to Black Spire Outpost on the planet Batuu and contribute to the  Star Wars: Galaxy's Edge themepark in Disneyland and Disney World. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
+								<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
 								<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique faucibus magna adipiscing aliquet blandit nisi dolor accumsan nascetur lorem. Vis enim. Curae. Mi arcu vis aliquam ipsum non accumsan ac mi faucibus amet eu accumsan erat interdum semper accumsan. Eu sagittis tellus accumsan neque lorem penatibus in porttitor. Vivamus commodo curae. Condimentum lobortis praesent id ac lorem. Lorem vis ipsum dolor feugiat consequat dolore adipiscing.</p>
 								<h3>Sed Magna Ornare</h3>
 								<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus. In accumsan lorem nunc ultrices a ac eu accumsan ac id nullam. Nec lobortis. Faucibus. Mi commodo laoreet arcu at non mi lacinia aliquet non lobortis phasellus accumsan nascetur varius. Integer orci porttitor eu faucibus aliquet faucibus ac accumsan adipiscing accumsan odio. Ut adipiscing.</p>
