--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 							<li>
 								<a href="#two" class="goto-next scrolly">projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">amazon</a></li>
+<!--									<li><a href="left-sidebar.html">amazon</a></li>-->
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="right-sidebar.html">lego<b>universe</b></a></li>
-									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
-									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
-									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
-									<li><a href="right-sidebar.html">traditional<b>art</b></a></li>
-									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
+									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
+									<li><a href="visualeffects.html">visual<b>effects</b></a></li>
+									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
+									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
+									<li><a href="freelancework.html">freelance<b>work</b></a></li>
 									<!--<li>
 										<a href="#">Projects</a>
 										<ul>
@@ -108,29 +108,19 @@
 									<div class="col-7 col-12-medium">
 										<div class="row gtr-33 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /><p style="position: absolute; top: 50%; left: 50%; text-align: center">amazon</p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /><p style="position: absolute; top: 50%; left: 50%; text-align: center">starwars<br>galaxy'sedge</p></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+<!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Projects_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>lego<b>universe</b></p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>visual<b>effects</b></p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Projects_BG.png" alt="" /><p>rally<b>software</b></p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>traditional<b>art</b></p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>freelance<b>work</b></p></span></div>
 									</div>
 									</div>
 							</div>
 						</div>
 					</div>	
-					<!--<div class="content">
-						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</div>-->
 					<a href="#three" class="goto-next scrolly">Next</a>
 <!--					<a href="#one" class="goto-next scrolly">Previous</a>-->
 				</section>
@@ -167,80 +157,15 @@
 <!--					<a href="#four" class="goto-next scrolly">Next</a>-->
 				</section>
 
-			<!-- Four -->
-				<!--<section id="four" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
-						</header>
-						<div class="box alt">
-							<div class="row gtr-uniform">
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-							</div>
-						</div>
-						<footer class="major">
-							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer>
-					</div>
-				</section>-->
-
-			<!-- Five -->
-				<!--<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
-					</div>
-				</section>-->
-
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
 <!--						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ryanbaier/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 <!--						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
 <!--						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:ryan@ryanbaier.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
