--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<div class="row gtr-33 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
 <!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
-										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Projects_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></span></div>
+										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/SWGE_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></span></div>
 										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>lego<b>universe</b></p></span></div>
 										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></span></div>
 										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>visual<b>effects</b></p></span></div>
