--- a/starwarsgalaxysedge.html
+++ b/starwarsgalaxysedge.html
@@ -36,7 +36,7 @@
 									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
 								</ul>
 							</li>
-							<li><a href="#three" class="goto-next scrolly">about<b>me</b></a></li>
+							<li><a href="index.html#three" class="goto-next scrolly">about<b>me</b></a></li>
 						</ul>
 					</nav>
 				</header>
@@ -56,8 +56,8 @@
 										</header>
 									</div>
 							</section>-->
-				<section id="one" class="spotlight style1 middle" style="height: 50vh">
-					<span class="image fit main"><img src="images/SWGE_BG.jpg" alt="" /></span>
+				<section id="one" class="spotlight style1 middle project">
+					<span class="image fit main"><img src="images/SWGE_BG.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>star<b>wars<br>galaxy's</b>edge</h2>
@@ -67,12 +67,14 @@
 					
 				</section>
 						<!-- Content -->
-							<section id="content">
+							<section id="content" style="margin: 1.5em">
 <!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
 								<h3>Dolore Amet Consequat</h3>
+								<span class="image left" style="max-width: 25%"><img src="images/SWGE_01.jpg" alt=""/></span>
 								<p>In early 2019 I had the opportunity to journey to Black Spire Outpost on the planet Batuu and contribute to the  Star Wars: Galaxy's Edge themepark in Disneyland and Disney World. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
+								
 								<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique faucibus magna adipiscing aliquet blandit nisi dolor accumsan nascetur lorem. Vis enim. Curae. Mi arcu vis aliquam ipsum non accumsan ac mi faucibus amet eu accumsan erat interdum semper accumsan. Eu sagittis tellus accumsan neque lorem penatibus in porttitor. Vivamus commodo curae. Condimentum lobortis praesent id ac lorem. Lorem vis ipsum dolor feugiat consequat dolore adipiscing.</p>
-								<h3>Sed Magna Ornare</h3>
+								<h3>Sed Magna Ornare</h3><span class="image right" style="max-width: 25%"><img src="images/SWGE_01.jpg" alt></span>
 								<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus. In accumsan lorem nunc ultrices a ac eu accumsan ac id nullam. Nec lobortis. Faucibus. Mi commodo laoreet arcu at non mi lacinia aliquet non lobortis phasellus accumsan nascetur varius. Integer orci porttitor eu faucibus aliquet faucibus ac accumsan adipiscing accumsan odio. Ut adipiscing.</p>
 								<ul>
 									<li>Faucibus orci lobortis ac adipiscing integer.</li>
