Main Page Title Adjustments & Project Page Changes
-Added LEGO Universe project page
-Added LEGO Universe Background
-Added placeholder video
-Added copy to Galaxy's Edge page
-Adjusted project page formatting
-Adjusted main page title formatting
-Cropped image on Galaxy's Edge page

--- a/starwarsgalaxysedge.html
+++ b/starwarsgalaxysedge.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Landed by HTML5 UP</title>
+		<title>Ryan Baier - Video Artist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +28,7 @@
 								<ul>
 									<li><a href="left-sidebar.html">amazon</a></li>
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="right-sidebar.html">lego<b>universe</b></a></li>
+									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
 									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
 									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
@@ -60,7 +60,8 @@
 					<span class="image fit main"><img src="images/SWGE_BG.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>star<b>wars<br>galaxy's</b>edge</h2>
+							<h2>star<b>wars<br>
+						    galaxy's</b>edge</h2>
 						</header>
 					</div>
 					<a href="#content" class="goto-next scrolly">Next</a>
@@ -69,20 +70,12 @@
 						<!-- Content -->
 							<section id="content" style="margin: 1.5em">
 <!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
-								<h3>Dolore Amet Consequat</h3>
-								<span class="image left" style="max-width: 25%"><img src="images/SWGE_01.jpg" alt=""/></span>
-								<p>In early 2019 I had the opportunity to journey to Black Spire Outpost on the planet Batuu and contribute to the  Star Wars: Galaxy's Edge themepark in Disneyland and Disney World. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
-								
-								<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique faucibus magna adipiscing aliquet blandit nisi dolor accumsan nascetur lorem. Vis enim. Curae. Mi arcu vis aliquam ipsum non accumsan ac mi faucibus amet eu accumsan erat interdum semper accumsan. Eu sagittis tellus accumsan neque lorem penatibus in porttitor. Vivamus commodo curae. Condimentum lobortis praesent id ac lorem. Lorem vis ipsum dolor feugiat consequat dolore adipiscing.</p>
-								<h3>Sed Magna Ornare</h3><span class="image right" style="max-width: 25%"><img src="images/SWGE_01.jpg" alt></span>
-								<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus. In accumsan lorem nunc ultrices a ac eu accumsan ac id nullam. Nec lobortis. Faucibus. Mi commodo laoreet arcu at non mi lacinia aliquet non lobortis phasellus accumsan nascetur varius. Integer orci porttitor eu faucibus aliquet faucibus ac accumsan adipiscing accumsan odio. Ut adipiscing.</p>
-								<ul>
-									<li>Faucibus orci lobortis ac adipiscing integer.</li>
-									<li>Col accumsan arcu mi aliquet placerat.</li>
-									<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-									<li>Blandit massa non blandit tempor interdum.</li>
-									<li>Lacinia mattis arcu nascetur lobortis.</li>
-								</ul>
+								<span class="image left" style="max-width: 30%"><img src="images/SWGE_01.png" alt=""/></span>
+								<p>In 2019 I had the opportunity to help craft some of Black Spire Outpost on the world of Batuu at the Galaxy’s Edge theme park in Disneyland and Disney World. I worked in collaboration with Walt Disney Imagineering and Bolder Games in Boulder, Colorado. Although I was involved with many of the installations for color corrects and tweaks, my main artistic focuses were the motion graphics and animation for the Droid Repair Station in the Droid Depot, the pricing sign for the Droid Depot, and the menus at Docking Bay 7 Food And Cargo. For the Droid Repair Station the idea was that a shroud would be placed in-front of a modern display panel and this would segment the panel into three smaller CRT-like displays consistent with the look and feel of Star Wars. The displays would have diagnostic data and readouts for the two physical animatronic droids in the installation, one an R2 unit and the other a BB unit.</p>
+								<span class="image right" style="max-width: 30%"><video controls playsinline autoplay muted loop src="images/SWGE_02.mp4" alt=""/></span>
+								<p>I was lucky enough to work with my former NetDevil and LEGO colleague Erik Beyer who handled the 3D work. When I started on the project I was given the designs and layouts for the monitors as well as renders of the 3D droids. My first point of order was to make sure that everything I was building in After Effects would be able to be changed and tweaked easily as the project file became more complex. This included using expressions to be able to quickly alter things like the color palette and nested compositions so I could easily change positions. As I started animating the layouts I had to have a lot of blinking lights, scrolling text, and other dynamically moving graphics which I also used expressions for as much as possible as hand animating these would have been a very onerous task. I’ve played video games since I was little and I still have a few CRT TV’s around the house, so I particularly enjoyed creating the faux CRT effects that were overlaid on top of the motion graphics.</p>
+								<span class="image left" style="max-width: 30%"><video controls playsinline autoplay muted loop src="images/SWGE_02.mp4" alt=""/></span>
+								<p>There were many rounds of reviews, feedback, and changes as you’d expect but once things got dialed in I was able to fly out to Disneyland and work on-site with the installations at the under-construction Galaxy’s Edge over the course of a week. As this was my first project in theme parks I wasn’t really used to having to go through construction training and wearing the proper construction attire while working with clients, but the WDI producers do an amazing job of preparing you and setting you up to succeed. One stand out memory I have is when I had finished working at the Droid Depot late one night I was walking out of the park which took me right by the finished full-scale Millenium Falcon. Maybe the construction crews were between shifts, but for whatever reason there was no one else around and for that moment it was just me and the Falcon, which was as surreal and amazing as you’d expect. Eventually the project wrapped up and as a nice perk I was able to take my son Lucky out to an early preview of the park for his birthday.</p>
 							</section>
 
 					</div>
@@ -91,15 +84,15 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+<!--						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ryanbaier/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+<!--						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
+<!--						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
+						<li><a href="mailto:ryan@ryanbaier.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
