--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Ryan Baier - Video Artist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,12 +54,17 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<header>
-							<h2>ryan<b>baier</b></h2>
-							<p>video and motion graphic artist</p>
-<!--							<br />Just apps. Lots of mother flipping apps.</p>-->
-						</header>
-<!--						<span class="image"><img src="images/Main_BG.png" alt="" /></span>-->
+						<div class="container">
+							<div class="row">
+								<div class="col-5 col-12-medium">
+									<header>
+										<h2>ryan<b>baier</b></h2>
+										<p>video and motion graphic artist</p>
+									</header>
+								</div>
+								<div class="col-7 col-12-medium"/>
+							</div>
+						</div>	
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -131,20 +136,20 @@
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="col-4 col-12-medium">
+								<div class="col-5 col-12-medium">
 									<header>
 										<h2>about<br><b>me</b></h2>
 <!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
 									</header>
 								</div>
-								<div class="col-4 col-12-medium">
+								<div class="col-3 col-12-medium">
 									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
 									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
 									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
 									augue varius tempus lobortis porttitor accumsan consequat
 									adipiscing lorem dolor.</p>
 								</div>
-								<div class="col-4 col-12-medium">
+								<div class="col-3 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
 									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
 									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
@@ -168,7 +173,7 @@
 						<li><a href="mailto:ryan@ryanbaier.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
