Many Fixes And Changes
-Updated menus to be the same on every page
-Fixed hover to work on bolded words
-Added temporary backgrounds for Freelance / FX and Traditional Art pages
-Added proper text to the About Me section of the main page
-Added new videos to Rally and Galaxy's Edge pages

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 										<div class="row gtr-33 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
 <!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
-										<div class="col-4 col-6-small"><span class="image fit"><img src="images/SWGE_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><img src="images/LU_BG.png" alt="" /><p>lego<b>universe</b></p></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><img src="images/JGE_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/Rally_BG.png" alt="" /><p>rally<b>software</b></p></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><img src="images/Main_BG.png" alt="" /><p>traditional<b>art</b></p></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><img src="images/About_BG.png" alt="" /><p>freelance<b>/fx</b></p></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="starwarsgalaxysedge.html"><img src="images/SWGE_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="legouniverse.html"><img src="images/LU_BG.png" alt="" /><p>lego<b>universe</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="jumpgateevolution.html"><img src="images/JGE_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></a></span></div>
+										<div class="col-4 col-6-xsmall"><span class="image fit"><a href="rallysoftware.html"><img src="images/Rally_BG.png" alt="" /><p>rally<b>software</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="traditionalart.html"><img src="images/Main_BG.png" alt="" /><p>traditional<b>art</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="freelanceandfx.html"><img src="images/About_BG.png" alt="" /><p>freelance<b>/fx</b></p></a></span></div>
 									</div>
 									</div>
 							</div>
@@ -141,18 +141,11 @@
 									</header>
 								</div>
 								<div class="col-3 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>I'm a freelance Video Artist who currently resides with my amazing wife and kids in beautiful Colorado.  I've previously worked for LEGO, NetDevil, and Rally Software as well as Charlex and Quiet Man, two top-tier visual effects comapnies in New York City.  I've also done freelance projects for Amazon, Walt Disney Imagineering, and Backflip Studios.</p>					
 								</div>
 								<div class="col-3 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>I'm grateful for the variety of projects I've had a chance to work on and I'm excited for whatever the future may hold.  I absolutely love animation and motion graphics and I always welcome the chance to learn and problem solve!</p>
+									<p>In my spare time...or what little of it I have, I love playing video games, watching movies, and practicing drawing and painting.</p>
 								</div>
 							</div>
 						</div>
