--- a/traditionalart.html
+++ b/traditionalart.html
@@ -26,14 +26,12 @@
 							<li>
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">amazon</a></li>
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
 									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
-									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
-									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
-									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
-									<li><a href="right-sidebar.html">traditional<b>art</b></a></li>
-									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
+									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
+									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
+									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 								</ul>
 							</li>
 							<li><a href="index.html#three" class="goto-next scrolly">about<b>me</b></a></li>
@@ -57,7 +55,7 @@
 									</div>
 							</section>-->
 		  <section id="one" class="spotlight style1 middle project">
-					<span class="image fit main"><img src="images/JGE_BG.png" alt="" /></span>
+					<span class="image fit main"><img src="images/TraditionalArt_BG.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>traditional<b>art</b></h2>
