--- a/rallysoftware.html
+++ b/rallysoftware.html
@@ -26,14 +26,12 @@
 							<li>
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">amazon</a></li>
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
 									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
-									<li><a href="left-sidebar.html">jumpgate<b>evolution</b></a></li>
-									<li><a href="right-sidebar.html">visual<b>effects</b></a></li>
-									<li><a href="no-sidebar.html">rally<b>software</b></a></li>
-									<li><a href="right-sidebar.html">traditional<b>art</b></a></li>
-									<li><a href="no-sidebar.html">everything<b>else</b></a></li>
+									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
+									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
+									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 								</ul>
 							</li>
 							<li><a href="index.html#three" class="goto-next scrolly">about<b>me</b></a></li>
@@ -71,7 +69,7 @@
 <!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
 								<span class="image right" style="max-width: 30%"><iframe width="16em" src="http://player.vimeo.com/video/557444193?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>I came to Rally in early 2013 as a freelancer working with their marketing team on several different projects. After a few months I was brought on full-time and worked as the in-house marketing video artist, using my expertise to provide video to Rally campaigns, conferences, and their YouTube channel. One memorable campaign was spearheaded by Jenny Slade to market the concept of Big Room Planning within Rally itself. DSLR cameras had recently become viable for smaller video production, so it gave me a chance to put some mileage on our new Panasonic GH4 and supporting equipment. I shot interviews and b-roll throughout the two days of planning, edited the video in Premiere, and created lower thirds and title cards in After Effects.</p>
-								<span class="image left" style="max-width: 30%"><iframe src="https://player.vimeo.com/video/562646900?autoplay=1&loop=1&badge=0&autopause=0&;player_id=0&controls=1&app_id=58479" width="16em" height="9em" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></span>
+								<span class="image left" style="max-width: 30%"><iframe src="https://player.vimeo.com/video/575145936?autoplay=1&loop=1&muted=1&badge=0&autopause=0&player_id=0&controls=1&app_id=58479#t=1m05s" width="16em" height="9em" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></span>
 								<p>After some time in marketing I was given a chance by Nate Copt, the Director of User Learning, to move to his team, which was basically Rally’s documentation team. Working with User Learning gave me a chance to change directions in terms of the type of work I had been doing. I was able to switch from marketing work with a goal of conversions and subscriptions to more of a focus on education and training. While this was happening, Rally was acquired by CA Technologies which then took me to a position of providing video guidance for CA documentation as a whole. A team of writers enthusiastic about video was assembled and part of my job was to provide tools, guidance and expertise to help push video as a learning tool within CA’s products. As the team had limited resources, limited budget, and limited professional video experience, we had to re-think the best ways to enable the team to create high quality videos for education and documentation. This led to the team adopting Camtasia as their video tool of choice since we found it struck a good balance of user friendliness and quality. At this point I was tasked with creating motion graphics templates for writers to use in Camtasia as well as creating tutorials to train them in the use of Camtasia on Windows and Mac.</p>
 								<span class="image right" style="max-width: 30%"><iframe width="16em" src="http://player.vimeo.com/video/557444060?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>When I first started at Rally they had just acquired a Finnish team chat tool called Flowdock. I actually still prefer features in Flowdock to features in Slack (I'm looking at you threaded conversations). Years later Flowdock’s development was moved to Boulder and the product went through a rebranding. Tania McCormack was the Product Owner and a Designer on Flowdock and she made the case for Flowdock needing a new video demonstrating its features and using the new look. I created the video in After Effects leaning heavily on Trapcode Mir for the ribbon effect. The video gave me a fun opportunity to work on a product with a new, bright, and fun look.</p>
